[gd_scene load_steps=28 format=3 uid="uid://e5sn3gdxbc6f"]

[ext_resource type="Script" uid="uid://cb6oow7qouame" path="res://scripts/enemy_goblin_script.gd" id="1_x6tgr"]
[ext_resource type="Texture2D" uid="uid://cwrkiqkxqibmc" path="res://resources/sprites/bandit_0001.png" id="2_50dt2"]
[ext_resource type="Texture2D" uid="uid://dx65rks2veou4" path="res://resources/sprites/bandit_0002.png" id="3_2aouj"]
[ext_resource type="Texture2D" uid="uid://bta37sb5lkkkk" path="res://resources/sprites/bandit_0003.png" id="4_40jkn"]
[ext_resource type="Texture2D" uid="uid://q3bjv50l0ldp" path="res://resources/sprites/bandit_0004.png" id="5_oxwf7"]
[ext_resource type="Texture2D" uid="uid://dp80ijtkh1tlm" path="res://resources/sprites/bandit_0005.png" id="6_b6fta"]
[ext_resource type="Texture2D" uid="uid://dggg27m63xl15" path="res://resources/sprites/bandit_0006.png" id="7_tqh65"]
[ext_resource type="Texture2D" uid="uid://6cirqjloabqp" path="res://resources/sprites/bandit_0007.png" id="8_h3dkc"]
[ext_resource type="Texture2D" uid="uid://vvgsejfq8li1" path="res://resources/sprites/bandit_0008.png" id="9_utbdn"]
[ext_resource type="Texture2D" uid="uid://breynagdo51bh" path="res://resources/sprites/bandit_0009.png" id="10_drg8k"]
[ext_resource type="Texture2D" uid="uid://bjwvylkhcrgfs" path="res://resources/sprites/bandit_0010.png" id="11_ic3m2"]
[ext_resource type="Texture2D" uid="uid://be2inx8f7nq3c" path="res://resources/sprites/bandit_0011.png" id="12_dxmra"]
[ext_resource type="Texture2D" uid="uid://df5awo7k5lulj" path="res://resources/sprites/bandit_0012.png" id="13_t5iho"]
[ext_resource type="Texture2D" uid="uid://dprebhslnqtbq" path="res://resources/sprites/bandit_0013.png" id="14_vcm3s"]
[ext_resource type="Texture2D" uid="uid://dd1vbyo5lby2n" path="res://resources/sprites/bandit_0014.png" id="15_ggs26"]
[ext_resource type="Texture2D" uid="uid://u8gfani2i3ey" path="res://resources/sprites/bandit_0015.png" id="16_c6i3a"]
[ext_resource type="Texture2D" uid="uid://bvqsp76ekahut" path="res://resources/sprites/bandit_0016.png" id="17_qdivt"]
[ext_resource type="Texture2D" uid="uid://ctbysqn0w6syr" path="res://resources/sprites/bandit_0017.png" id="18_4u50x"]
[ext_resource type="Texture2D" uid="uid://cylvaf2g83cfb" path="res://resources/sprites/bandit_0018.png" id="19_25gxe"]
[ext_resource type="Texture2D" uid="uid://dvqdl0y1etwkj" path="res://resources/sprites/bandit_0019.png" id="20_wgajg"]
[ext_resource type="Texture2D" uid="uid://bxn5yf7amklsu" path="res://resources/sprites/bandit_0020.png" id="21_exqx4"]
[ext_resource type="Texture2D" uid="uid://cw2np3r57u4yn" path="res://resources/sprites/bandit_0021.png" id="22_lo6kv"]
[ext_resource type="Texture2D" uid="uid://7ndcf3uv5kpj" path="res://resources/sprites/bandit_0022.png" id="23_of5b0"]
[ext_resource type="PackedScene" uid="uid://c2a35msevnk4d" path="res://scenes/health_bar.tscn" id="24_2oi2u"]
[ext_resource type="Script" uid="uid://2keyy5hsydyv" path="res://scripts/components/motion_component.gd" id="25_4y54g"]
[ext_resource type="Script" uid="uid://ly8ldtphpxmy" path="res://scripts/components/health_component.gd" id="26_f1urp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w8l5x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_50dt2")
}, {
"duration": 1.0,
"texture": ExtResource("3_2aouj")
}, {
"duration": 1.0,
"texture": ExtResource("4_40jkn")
}, {
"duration": 1.0,
"texture": ExtResource("5_oxwf7")
}, {
"duration": 1.0,
"texture": ExtResource("6_b6fta")
}, {
"duration": 1.0,
"texture": ExtResource("7_tqh65")
}, {
"duration": 1.0,
"texture": ExtResource("8_h3dkc")
}, {
"duration": 1.0,
"texture": ExtResource("9_utbdn")
}, {
"duration": 1.0,
"texture": ExtResource("10_drg8k")
}, {
"duration": 1.0,
"texture": ExtResource("11_ic3m2")
}, {
"duration": 1.0,
"texture": ExtResource("12_dxmra")
}, {
"duration": 1.0,
"texture": ExtResource("13_t5iho")
}, {
"duration": 1.0,
"texture": ExtResource("14_vcm3s")
}, {
"duration": 1.0,
"texture": ExtResource("15_ggs26")
}, {
"duration": 1.0,
"texture": ExtResource("16_c6i3a")
}, {
"duration": 1.0,
"texture": ExtResource("17_qdivt")
}, {
"duration": 1.0,
"texture": ExtResource("18_4u50x")
}, {
"duration": 1.0,
"texture": ExtResource("19_25gxe")
}, {
"duration": 1.0,
"texture": ExtResource("20_wgajg")
}, {
"duration": 1.0,
"texture": ExtResource("21_exqx4")
}, {
"duration": 1.0,
"texture": ExtResource("22_lo6kv")
}, {
"duration": 1.0,
"texture": ExtResource("23_of5b0")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="EnemyGoblin" type="Node2D"]
script = ExtResource("1_x6tgr")

[node name="HealthBar" parent="." instance=ExtResource("24_2oi2u")]
position = Vector2(-19, -24)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5572339, 0.5991522)
sprite_frames = SubResource("SpriteFrames_w8l5x")
flip_h = true

[node name="MotionComponent" type="Node" parent="."]
script = ExtResource("25_4y54g")
metadata/_custom_type_script = "uid://2keyy5hsydyv"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("26_f1urp")
metadata/_custom_type_script = "uid://ly8ldtphpxmy"
